add controller and update yaml for create question API
